stefan; 27 jun 2003 bug 488 fixed

0.5.9.3; 26 jun 2003 cristi
0.5.9 major improvements:
completely refactored tag library, taking more advantage of page analysis
static page analysis, no need for attributes to be passed to the analysis. 
non-OQL-parameters restricted to where=, orderby= and groupBy=
0.5.9.3-specific
org.makumba.FieldDefinition exposes more functionality of org.makumba.abstr.FieldInfo
org.makumba.view.jsptaglib uses no org.makumba.abstr (it was using RecordInfo and FieldInfo)
better type checking in mak:input (addressing bugs 17, 451)
check for existence of form action (bug 357)
support for style, styleClass, styleId (bug 101) and possibility of adding more extra formatting

0.5.8.8; 21 jun 2003 fred
fixed bug 479 and 486 : parser cannot handle \n (newline) or \\ (backslash) in attribute value

0.5.8.7; 18 jun 2003 fred
fixed bug 465 (JSP parser should recognize and ignore JSP comments and Java scriplets)

0.5.8.6; 8 jun 2003 cristi
added page parsing, and page analysis (not yet static)
removed training loops and lots of code that dealt with them. tr-loop structures are still in place, more refactoring is needed
incorporated a potential fix for bug 403 (config file not found)

0.5.7.6; 21 may 2003 cristi
several bugs of the FLE protection are fixed. 
the newController branch (0.5.6, 0.5.7) is now in the main CVS trunk

stefan;23 apr 2003: source tarball is published whenever jar is published

0.5.7; in preparation, cristi
first-load errors are fixed, no need for more workarounds to avoid them, no need for instanceof checks

bug 6 is finally fixed, the controller/form responder code is now separated

cristi: some timestamps were read from DB as BigDecimal. they are normal Timestamp now
cristi: improved HTML guess detection to include other tags
cristi: if <mak:input > sees both a type and a value, they are checked for compatibility (bugs 371 and 372 resulted, were fixed).

0.5.5.27; 27 mar 2003 stefan